# eurosys21-artifacts

./: .dockerignore  .gitignore  Makefile  README.md  requirements.txt  run.sh
experiments/: .gitignore  README
experiments/01_linux-deps/: README.md  clean.sh  create_cscope_db.sh  plot.py  run.sh
experiments/02_abi/: README.md  setup.sh
experiments/06_syscall-heatmap/: README.md  syscalls_sample.json
experiments/08_syscall-support/: README.md
experiments/13_compare-min-mem/: benchmark.sh
experiments/14_redis-perf/: .gitignore  README  benchmark.sh  genimages.sh
experiments/15_nginx-perf/: benchmark.sh  genimages.sh
experiments/16_unikraft-nginx-alloc-boot/: .gitignore  benchmark.sh  genimages.sh  parse.py
experiments/tab_04_kvs_compare/aux/lib_src/pthread_embedded/: .bintray_descriptor.json  .create.c.swp  .gitignore  .sched.h.swp  .travis.yml  Makefile.in  configure  configure.ac  pte_callUserDestroyRoutines.c  pte_threadStart.c  pte_throw.c  pthread.h  pthread_kill.c  sem_destroy.c  tests.sh
experiments/tab_04_kvs_compare/aux/lib_src/pthread_embedded/doc/: pte_main.html
experiments/tab_04_kvs_compare/aux/lib_src/pthread_embedded/platform/hermit/: pte_osal.c
experiments/tab_04_kvs_compare/aux/lib_src/pthread_embedded/platform/psl1ght/: Makefile.tests  main.c  psl1ght_osal.c
support/: Dockerfile.mirage  Dockerfile.plot  Dockerfile.plots  common.sh  unikraft-eurosys21.dockerfile
tools/: .gitignore  Makefile  build-lupine.sh  build-toolchain.sh  install-dpdk.sh  install-xen.sh  mkinitrd  mkukcpio  qemu-guest  tsc_mhz  tunecpumax  wrk
(+1255 files in other folders)
