#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(pte, 1.2.2, http://pthreads-emb.sourceforge.net, POSIX Threads for embedded systems, http://pthreads-emb.sourceforge.net)
AC_CONFIG_SRCDIR(pthread_init.c)
AC_CANONICAL_SYSTEM

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
